# MRNPE-AgeEstimation

./: README.md  single_face_net.py  vgg_weight.py
FaceLandmark/: CMakeLists.txt  List_crop.cpp  NPDDetector.cpp  NPDModel.cpp  Pose.cpp  Pose.h  ReadMe.txt  _type.h  batch_DLRC.cpp  batch_DLRC.h  batch_rotate_crop.cpp  batch_rotate_crop.h  config.h  face_DLRC.cpp  face_DLRC.h  featpyramid.cpp  imtransform.cpp  imtransform.h  imtransform224.cpp  model.cpp  mtimes.h  rotate_crop.cpp  rotate_crop.h  shapeRegression.cpp  shapeRegression.h  stdafx.h
FaceLandmark/other_files/: AIMG.h  DetCamera.cpp  DetCamera_multiperson.cpp  DetList.cpp
data_augmentation/: mirror.py  noise_face.py  rotation_face.py
prediction/: ensemble_m.py
pytorch/: dataloader.py  single_face_net.py
vgg_morph_s1_net/eye_net/: age_net.prototxt
vgg_morph_s1_net/mouth_net/: age_net.prototxt
vgg_morph_s1_net/nose_net/: age_net.prototxt  solver_all.prototxt
vgg_morph_s2_net/eye_net/: age_net.prototxt  solver_all.prototxt  train_all.sh
vgg_morph_s2_net/mouth_net/: age_net.prototxt  clpl.py
vgg_morph_s2_net/nose_net/: age_deploy.prototxt  age_net.prototxt  solver_all.prototxt  train_all.sh
